# HSI_Compression

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  results_top_internal_hsi759_429_0.8_0.2.txt  results_top_internal_hsi759_429_1.6_0.4.txt  results_top_internal_hsi759_479_0.8_0.2.txt  results_top_internal_hsi759_479_1.6_0.4.txt
.claude/skills/bench-compression/: SKILL.md  bench_runs.py
.claude/skills/refining-sc/: SKILL.md  refine_sc.py
docs/: COMPRESSION.md  MATH.md  PROGRAM_DESCRIPTION.md  SKILLS.md  USAGE.md  report_sc_internal.md
include/: app.h  check_pixel.h  compressed_image.h  compression.h  compression_settings.h  decompress.h  etalon_shift.h  functions.h  hsi_header.h  io.h  kekm.h  match_resalt.h  memory.h  save.h  standart_data.h  struct_hsi.h
src/: app.cpp  calculate_mse.cpp  calculate_msi.cpp  check_pixel.cpp  compression.cpp  decompress.cpp  etalon_shift.cpp  free_hsi.cpp  free_memory.cpp  get_standards.cpp  kekm.cpp  load_hsi_data.cpp  main.cpp  print_pixel.cpp  read_hdr_file.cpp  read_hrd_file.cpp  save.cpp  save_rgb.cpp
